refact: done project structure refactoring
