# internal/application/dto/message.go
@@ -1,0 +1,17 @@
+package dto
+
+import (
+	"github.com/google/uuid"
+)
+
+type Message struct {
+	EventId uuid.UUID `json:"event_id"`
+	Body    TaskEvent `json:"body"`
+}
+
+func FromTaskEvent(event TaskEvent) Message {
+	return Message{
+		EventId: uuid.New(),
+		Body:    event,
+	}
+}
